fix layout bug and shrink image

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -10,7 +10,6 @@
 
 .main-contents {
     margin-left: 250px;
-    width: inherit;
 }
 
 #mysidebar {
